# zue_sophpi-huashan

./: .gitignore  README.md  download_host-tools.sh
cvi_media_sdk/: .gitignore  host-tools
cvi_media_sdk/freertos/cvitek/task/: CMakeLists.txt
cvi_media_sdk/fsbl/: .gitignore
cvi_media_sdk/fsbl/make_helpers/: build_macros.mk
cvi_media_sdk/fsbl/plat/cv182x/: fiptool.py  platform.c
cvi_media_sdk/fsbl/plat/mars/: platform.c  platform.mk
cvi_media_sdk/fsbl/plat/phobos/: ddr  platform.mk  security  uart
cvi_media_sdk/isp_tuning/: copyBin.sh
cvi_media_sdk/linux_5.10/drivers/bluetooth/: hci_h4.c  hci_ldisc.c
cvi_media_sdk/linux_5.10/drivers/efuse/: Makefile
cvi_media_sdk/linux_5.10/drivers/thermal/: Makefile  cvitek_phobos_thermal.c
cvi_media_sdk/linux_5.10/kernel/sched/: cvi_sched.h
cvi_media_sdk/middleware/v2/: .gitignore  Makefile.param
cvi_media_sdk/middleware/v2/include/: cvi_bin.h  cvi_debug.h  cvi_misc.h  cvi_sns_ctrl.h  cvi_sys.h  cvi_vb.h  cvi_vpss.h
cvi_media_sdk/middleware/v2/ko/: cvi_vc_driver.ko  cvi_wiegand.ko  mars_base.ko  mars_clock_cooling.ko  mars_dwa.ko  mars_fast_image.ko  mars_jpeg.ko  mars_mipi_tx.ko  mars_mon.ko  mars_rgn.ko  mars_rtc.ko  mars_rtos_cmdqu.ko  mars_saradc.ko  mars_sys.ko  mars_tpu.ko  mars_vo.ko  mars_wdt.ko  snsr_i2c.ko
cvi_media_sdk/middleware/v2/ko_shrink/: cvi_mipi_rx.ko  cvi_vc_driver.ko  cvi_wiegand.ko  mars_base.ko  mars_fast_image.ko  mars_jpeg.ko  mars_mipi_tx.ko  mars_mon.ko  mars_pwm.ko  mars_rgn.ko  mars_rtc.ko  mars_rtos_cmdqu.ko  mars_sys.ko  mars_tpu.ko  mars_vcodec.ko  mars_vi.ko  mars_vo.ko  mars_vpss.ko  mars_wdt.ko
cvi_media_sdk/middleware/v2/lib_glibc_riscv64/: libavcodec.so.58.106.100  libavutil.so.56.59.100  libcrypto.so.1.1  libnanomsg.so.5.1.0  (+3 more)
cvi_media_sdk/opensbi/: Makefile
cvi_media_sdk/osdrv/tp/: Makefile
cvi_media_sdk/u-boot-2021.10/cmd/: cvi_update.c  sf.c
cvi_media_sdk/u-boot-2021.10/include/: cvi_update.h  cvipart.h  imgs.h
cvi_mmf_sdk/: .gitignore  host-tools
cvi_mmf_sdk/freertos/cvitek/: build_phobos.sh
cvi_mmf_sdk/middleware/v2/: .gitignore  Makefile.param
cvi_mmf_sdk/osdrv/: .gitignore
cvi_mmf_sdk/osdrv/wireless/: Makefile
cvi_mmf_sdk/u-boot-2021.10/cmd/: efuse.c  net.c
cviai_sample/: Readme.txt  get_cviai.sh
cviai_sample/face_detection_sample/: CMakeLists.txt
cviai_sample/face_detection_sample/face_detection/: CMakeLists.txt  face_detection.cpp
mmf-sdk/: .gitignore
mmf-sdk/freertos/cvitek/task/camera/: CMakeLists.txt
mmf-sdk/freertos/cvitek/task/camera/src/mars/: cam_task.c
mmf-sdk/fsbl/: Makefile
mmf-sdk/fsbl/make_helpers/: fip.mk
mmf-sdk/isp_tuning/: copyBin.sh
mmf-sdk/osdrv/wireless/: Makefile
mmf-sdk/u-boot-2021.10/cmd/: cvi_jpeg.c  cvi_update.c  cvi_vo.c
mmf-sdk/u-boot-2021.10/drivers/: Makefile
mmf-sdk/u-boot-2021.10/include/: sdhci.h
product-sample/access-guard-turnkey/: .config  .gitignore  .gitmodules  Kconfig  Kconfig.app  Makefile  README.md  support_vencBindVi_unBind.patch
product-sample/access-guard-turnkey/application_legacy/: Kconfig  Makefile  sac_main_app.c
product-sample/access-guard-turnkey/cpsl/: Makefile
product-sample/access-guard-turnkey/cpsl/common/signal_slot/: CMakeLists.txt  Makefile  README.md
product-sample/access-guard-turnkey/cpsl/common/signal_slot/include/cvi_signal_slot/: cvi_signal_slot.h  signal.hpp  slot.hpp  types.hpp
product-sample/access-guard-turnkey/cpsl/common/signal_slot/src/: cvi_signal_slot.cpp
product-sample/access-guard-turnkey/cpsl/common/signal_slot/test/: CMakeLists.txt  unit_test.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/: CMakeLists.txt  build.sh  run.sh
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/calibrate/: CMakeLists.txt  calibrate.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/common/: config.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/include/: config.h  tool.h
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/irprocess/: CMakeLists.txt  irprocess.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/search/: CMakeLists.txt  search.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/time_test/: CMakeLists.txt  time_test.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/toolchain/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/track/: CMakeLists.txt  track.cpp
product-sample/access-guard-turnkey/cpsl/hal/algorithm/src/Meg_Lg_CV1835_FacePass_V1.2.1/demo/videoProcess/: CMakeLists.txt  videoProcess.cpp
product-sample/access-guard-turnkey/customer/: Kconfig  Makefile
product-sample/access-guard-turnkey/function_lib/: Kconfig  Makefile
product-sample/access-guard-turnkey/include/: autoconf.h  md5.h
product-sample/access-guard-turnkey/samples/: fb_test.c  rs485_test.c  wdt_test.c
product-sample/access-guard-turnkey/tools/: checkconfigfile.mk  gen_autoconf_h
product-sample/awtk_app/: .gitignore  Makefile  README  build_awtk.sh
product-sample/awtk_app/awtkcode/: README.md
product-sample/awtk_app/touchpad/: Makefile
product-sample/awtk_app/ui/: Makefile
(+5346 files in other folders)
